--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class='map-view'>
       <div id="root"></div>
-      <div id='map' style='height: 100vh'></div>
+      <div id='map' style="height: 100vh"></div>
     </div>
 
     <!--the map api stuff-->
